Changed Name to Finance Advisor

--- a/templates/login.html
+++ b/templates/login.html
@@ -5,7 +5,7 @@
     <div class="navbar-brand">
       <a class="navbar-item" href="/">
         <img src="https://github.com/anfederico/Flaskex/raw/master/media/flaskex-logo.png" alt="Flaskex">
-        <h6 href="/" class="subtitle"><strong>Flaskex</strong></h6>
+        <h6 href="/" class="subtitle"><strong>Finance Advisor</strong></h6>
       </a>
       <div id="navbar-burger-id" class="navbar-burger burger" data-target="navbar-menu-id">
         <span></span>
@@ -47,14 +47,14 @@
     </div>
   </nav>
 </section>
-<title>Flaskex</title>
+<title>Finance Advisor</title>
 <section class="hero is-primary is-bold is-medium">
   <div class="hero-body">
     <div class="container has-text-centered">
       <div class="columns">
         <div class="column is-auto">
           <br>
-          <p class="title is-2">Flaskex</p>
+          <p class="title is-2">Finance Advisor</p>
           <p class="subtitle is-4"><i>Simple example for rapid prototyping</i></p>
           <p class="subtitle is-5">&#x2022 Encrypted user authorizaton</p>
           <p class="subtitle is-5">&#x2022 Ready to go database system</p>
@@ -114,19 +114,19 @@
     <div class="container">
       <div class="content has-text-centered">
         <p>
-          <strong>Flaskex</strong> by Anthony Federico
+          <strong>Finance Advisor</strong> by Stefan K., Peter H. and Simon P.
           <span class="icon is-small">
             <i class="fa fa-copyright"></i>
-          </span>2017</a>
+          </span>2019</a>
         </p>
         <p>
-          <a class="icon has-text-primary" href="https://github.com/anfederico" target="_blank">
+          <a class="icon has-text-primary" href="https://github.com/Pizajolo/finance-bot" target="_blank">
             <i class="fa fa-globe"></i>
           </a>          
-          <a class="icon has-text-primary" href="https://github.com/anfederico" target="_blank">
+          <a class="icon has-text-primary" href="https://github.com/Pizajolo/finance-bot" target="_blank">
             <i class="fa fa-github"></i>
           </a>
-          <a class="icon has-text-primary" href="mailto:anfederico@github.user" target="_blank">
+          <a class="icon has-text-primary" href="" target="_blank">
             <i class="fa fa-envelope"></i>
           </a>
         </p>
