--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -3,7 +3,7 @@
     <div class="navbar-brand">
       <a class="navbar-item" href="/">
         <img src="https://github.com/anfederico/Flaskex/raw/master/media/flaskex-logo.png" alt="Flaskex_logo">
-        <h6 href="/" class="subtitle"><strong>Flaskex</strong></h6>
+        <h6 href="/" class="subtitle"><strong>Finance Advisor</strong></h6>
       </a>
       <div id="navbar-burger-id" class="navbar-burger burger" data-target="navbar-menu-id">
         <span></span>
