--- a/templates/settings.html
+++ b/templates/settings.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block body %}
 {% include "navbar.html" %}
-<title>Flaskex</title>
+<title>Finance Advisor</title>
 <section class="hero is-primary is-bold is-small">
   <div class="hero-body">
     <div class="container has-text-centered">
