--- a/templates/login.html
+++ b/templates/login.html
@@ -55,10 +55,10 @@
         <div class="column is-auto">
           <br>
           <p class="title is-2">Finance Advisor</p>
-          <p class="subtitle is-4"><i>Simple example for rapid prototyping</i></p>
-          <p class="subtitle is-5">&#x2022 Encrypted user authorizaton</p>
-          <p class="subtitle is-5">&#x2022 Ready to go database system</p>
-          <p class="subtitle is-5">&#x2022 User login, signup, and settings</p>           
+          <p class="subtitle is-4"><i>We help you to make money with trading</i></p>
+          <p class="subtitle is-5">&#x2022 Sentiment Analyses and AI</p>
+          <p class="subtitle is-5">&#x2022 Reinforcement learning</p>
+          <p class="subtitle is-5">&#x2022 Easy to use interface</p>
         </div>
         <div class="column is-auto">
           <div id="signup-box" class="signup-box">
