First commit to new Frontend, Basics are working but still stuff todo

--- a/templates/analyse.html
+++ b/templates/analyse.html
@@ -9,7 +9,7 @@
                 </a>
                 <hr class="sidebar-divider my-0">
                 <ul class="nav navbar-nav text-light" id="accordionSidebar">
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="home"><i
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="home"><i
                             class="fas fa-tachometer-alt"></i><span>Home</span></a></li>
                     <li class="nav-item" role="presentation"></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="profile"><i
@@ -25,10 +25,11 @@
                 <nav class="navbar navbar-light navbar-expand bg-white shadow mb-4 topbar static-top">
                     <div class="container-fluid">
                         <button class="btn btn-link d-md-none rounded-circle mr-3" id="sidebarToggleTop" type="button">
-                            <i class="fas fa-bars"></i></button>
+                            <i
+                                    class="fas fa-bars"></i></button>
                         <form action="/analyse" method="GET" class="form-inline d-none d-sm-inline-block mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
-                            <div class="input-group"><input class="bg-light form-control border-0 small" name="stock"
-                                                            type="text" placeholder="Search for Share...">
+                            <div class="input-group"><input class="bg-light form-control border-0 small" type="text" name="stock"
+                                                            placeholder="Search for Share...">
                                 <div class="input-group-append">
                                     <button class="btn btn-primary py-0" type="submit"><i class="fas fa-search"></i>
                                     </button>
@@ -57,10 +58,11 @@
                                         <a class="d-flex align-items-center dropdown-item" href="#">
                                             <div class="mr-3">
                                                 <div class="bg-success icon-circle"><i
-                                                        class="fas fa-donate text-white"></i></div>
+                                                        class="fas fa-donate text-white"></i>
+                                                </div>
                                             </div>
                                             <div><span class="small text-gray-500">December 7, 2019</span>
-                                                <p>fAI maked 20% in the last three month investing in Apple!</p>
+                                                <p>fAI made 20% in the last three month investing in Apple!</p>
                                             </div>
                                         </a>
                                     </div>
@@ -76,8 +78,9 @@
                                         src="../static/assets/img/avatars/avatar5.jpeg?h=35dc45edbcda6b3fc752dab2b0f082ea"></a>
                                     <div
                                             class="dropdown-menu shadow dropdown-menu-right animated--grow-in"
-                                            role="menu"><a class="dropdown-item" role="presentation" href="home"><i
-                                            class="fas fa-tachometer-alt fa-sm fa-fw mr-2 text-gray-400"></i>&nbsp;Home</a><a
+                                            role="menu">
+                                        <a class="dropdown-item" role="presentation" href="home"><i
+                                                class="fas fa-tachometer-alt fa-sm fa-fw mr-2 text-gray-400"></i>&nbsp;Home</a><a
                                             class="dropdown-item" role="presentation" href="profile"><i
                                             class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>&nbsp;Profile</a>
                                         <div
@@ -91,83 +94,74 @@
                     </div>
                 </nav>
                 <div class="container-fluid">
-                    <h3 class="text-center text-dark mb-1">Find the next great Investment</h3>
-                    <div class="row text-center" style="margin-top: 50px;">
-                        <div class="col" style="padding: 0px;padding-right: 0px;padding-left: 0px;">
-
-                            <!--Main Search-->
-                            <form action="/analyse" method="GET">
-                                <div class="input-group" style="background-color: rgba(0,0,0,0);"><input id="form-input-main" name="stock"
-                                        class="bg-dark form-control form-control-lg border-0 small"
-                                        type="text" placeholder="Search for Stocks..."
-                                        style="background-color: rgb(85,82,82);color: rgb(231,232,238);min-width: 50px;">
-                                    <div class="input-group-append">
-                                        <button id="search_main" class="btn btn-primary py-0" type="submit"><i class="fas fa-search"></i>
-                                        </button>
+                    <div class="d-sm-flex justify-content-between align-items-center mb-4">
+                        <!-- Start: #share -->
+                        <h3 id="share_name" class="text-dark mb-0">{{ name }}</h3>
+                        <!-- End: #share --><a class="btn btn-primary btn-sm d-none d-sm-inline-block" role="button"
+                                               href="#"><i class="fas fa-download fa-sm text-white-50"></i>&nbsp;Generate
+                        Report</a></div>
+                    <!-- Start: Chart -->
+                    <div class="row">
+                        <div class="col">
+                            <div class="card shadow mb-4">
+                                <div class="card-header d-flex justify-content-between align-items-center">
+                                    <h6 class="text-primary font-weight-bold m-0">Stock chart with AI buy and
+                                        sell&nbsp;</h6>
+                                    <div class="dropdown no-arrow">
+                                        <button class="btn btn-link btn-sm dropdown-toggle" data-toggle="dropdown"
+                                                aria-expanded="false" type="button"><i
+                                                class="fas fa-ellipsis-v text-gray-400"></i></button>
+                                        <div class="dropdown-menu shadow dropdown-menu-right animated--fade-in"
+                                             role="menu">
+                                            <p class="text-center dropdown-header">dropdown header:</p><a
+                                                class="dropdown-item" role="presentation" href="#">&nbsp;Action</a><a
+                                                class="dropdown-item" role="presentation" href="#">&nbsp;Another
+                                            action</a>
+                                            <div class="dropdown-divider"></div>
+                                            <a class="dropdown-item" role="presentation" href="#">&nbsp;Something else
+                                                here</a></div>
                                     </div>
                                 </div>
-                            </form>
+                                <div class="card-body">
+                                    <div class="chart-area">
+                                        <canvas id="myChart"></canvas>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <div class="row" style="margin-top: 50px;">
-                        <div class="col">
-                            <!-- Start: Basic Card -->
-                            <div class="card shadow mb-4">
-                                <div class="card-header py-3">
-                                    <h6 class="text-primary m-0 font-weight-bold">Why trust us?</h6>
-                                </div>
+                    <!-- End: Chart -->
+                    <div class="row">
+                        <div class="col-md-6 col-xl-3 mb-4">
+                            <div class="card shadow border-left-primary py-2">
                                 <div class="card-body">
-                                    <p class="m-0">The styling for this basic card example is created by using default
-                                        Bootstrap utility classes. By using utility classes, the style of the card
-                                        component can be easily modified with no need for any custom CSS!</p>
+                                    <div class="row align-items-center no-gutters">
+                                        <div class="col mr-2">
+                                            <div class="text-uppercase text-primary font-weight-bold text-xs mb-1">
+                                                <span>Earnings (monthly)</span>
+                                            </div>
+                                            <div class="text-dark font-weight-bold h5 mb-0"><span>5,04%</span></div>
+                                        </div>
+                                        <div class="col-auto"><i class="fas fa-calendar fa-2x text-gray-300"></i></div>
+                                    </div>
                                 </div>
                             </div>
-                            <!-- End: Basic Card -->
                         </div>
-                        <div class="col">
-                            <!-- Start: Basic Card -->
-                            <div class="card shadow mb-4">
-                                <div class="card-header py-3">
-                                    <h6 class="text-primary m-0 font-weight-bold">Why is AI better than humans?</h6>
-                                </div>
+                        <div class="col-md-6 col-xl-3 mb-4">
+                            <div class="card shadow border-left-success py-2">
                                 <div class="card-body">
-                                    <p class="m-0">The styling for this basic card example is created by using default
-                                        Bootstrap utility classes. By using utility classes, the style of the card
-                                        component can be easily modified with no need for any custom CSS!</p>
+                                    <div class="row align-items-center no-gutters">
+                                        <div class="col mr-2">
+                                            <div class="text-uppercase text-success font-weight-bold text-xs mb-1">
+                                                <span>Earnings (annual)</span>
+                                            </div>
+                                            <div class="text-dark font-weight-bold h5 mb-0"><span>64,32%</span></div>
+                                        </div>
+                                        <div class="col-auto"><i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
-                            <!-- End: Basic Card -->
-                        </div>
-                    </div>
-                    <div class="row" style="margin-top: 50px;">
-                        <div class="col">
-                            <!-- Start: Basic Card -->
-                            <div class="card shadow mb-4">
-                                <div class="card-header py-3">
-                                    <h6 class="text-primary m-0 font-weight-bold">How does it work?</h6>
-                                </div>
-                                <div class="card-body">
-                                    <p class="m-0">The styling for this basic card example is created by using default
-                                        Bootstrap utility classes. By using utility classes, the style of the card
-                                        component can be easily modified with no need for any custom CSS!</p>
-                                </div>
-                            </div>
-                            <!-- End: Basic Card -->
-                        </div>
-                        <div class="col">
-                            <!-- Start: Basic Card -->
-                            <div class="card shadow mb-4">
-                                <div class="card-header py-3">
-                                    <h6 class="text-primary m-0 font-weight-bold">Costes and how to test it for
-                                        FREE</h6>
-                                </div>
-                                <div class="card-body">
-                                    <p class="m-0">The styling for this basic card example is created by using default
-                                        Bootstrap utility classes. By using utility classes, the style of the card
-                                        component can be easily modified with no need for any custom CSS!</p>
-                                </div>
-                            </div>
-                            <!-- End: Basic Card -->
                         </div>
                     </div>
                 </div>
@@ -175,11 +169,13 @@
             <footer class="bg-white sticky-footer" style="margin-top: 100px;">
                 <div class="container my-auto">
                     <div class="text-center my-auto copyright">
-                        <span>Copyright © financial Advisory Intelligence 2019</span></div>
+                        <span>Copyright © financial Advisory Intelligence 2019</span>
+                    </div>
                 </div>
             </footer>
         </div>
         <a class="border rounded d-inline scroll-to-top" href="#page-top"><i class="fas fa-angle-up"></i></a></div>
 {% endblock %}
-
-
+{% block scripts %}
+<script src="../static/js/analyse.js"></script>
+{% endblock %}
