--- a/templates/login.html
+++ b/templates/login.html
@@ -1,140 +1,47 @@
 {% extends "base.html" %}
 {% block body %}
-<section class="hero is-white is-medium">
-  <nav class="navbar is-transparent">
-    <div class="navbar-brand">
-      <a class="navbar-item" href="/">
-        <img src="https://github.com/anfederico/Flaskex/raw/master/media/flaskex-logo.png" alt="Flaskex">
-        <h6 href="/" class="subtitle"><strong>Finance Advisor</strong></h6>
-      </a>
-      <div id="navbar-burger-id" class="navbar-burger burger" data-target="navbar-menu-id">
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
-    </div>
-    <div id="navbar-menu-id" class="navbar-menu">
-      <div class="navbar-end">
-        <a class="navbar-item">
-          <div class="field">
-            <p class="control has-icons-left">
-              <input class="login-input input is-small is-success" type="text" id="login-user" placeholder="Username">
-                <span class="icon is-small is-left">
-                  <i class="fa fa-user"></i>
-                </span>
-            </p>
-          </div>
-        </a>
-        <a class="navbar-item">
-          <div class="field">
-            <p class="control has-icons-left">
-              <input class="login-input input is-small is-success" type="password" id="login-pass" placeholder="Password">
-                <span class="icon is-small is-left">
-                  <i class="fa fa-lock"></i>
-                </span>
-            </p>
-          </div>
-        </a>
-        <span class="navbar-item">
-          <a id="login-button" class="button is-primary is-inverted">
-            <span class="icon">
-              <i class="fa fa-check"></i>
-            </span>
-            <span>Login</span>
-          </a>
-        </span>
-      </div>
-    </div>
-  </nav>
-</section>
-<title>Finance Advisor</title>
-<section class="hero is-primary is-bold is-medium">
-  <div class="hero-body">
-    <div class="container has-text-centered">
-      <div class="columns">
-        <div class="column is-auto">
-          <br>
-          <p class="title is-2">Finance Advisor</p>
-          <p class="subtitle is-4"><i>We help you to make money with trading</i></p>
-          <p class="subtitle is-5">&#x2022 Sentiment Analyses and AI</p>
-          <p class="subtitle is-5">&#x2022 Reinforcement learning</p>
-          <p class="subtitle is-5">&#x2022 Easy to use interface</p>
-        </div>
-        <div class="column is-auto">
-          <div id="signup-box" class="signup-box">
-            <div class="signup-area">
-              <h1 class="title">Sign Up</h1>
-              <div class="field">
-                <p class="control has-icons-left has-icons-right">
-                  <input id="signup-user" class="input is-success" type="text" placeholder="Username">
-                  <span class="icon is-small is-left">
-                    <i class="fa fa-user"></i>
-                  </span>
-                  <span class="icon is-small is-right">
-                    <i class="fa fa-check"></i>
-                  </span>
-                </p>
-              </div>
-              <div class="field">
-                <p class="control has-icons-left has-icons-right">
-                  <input id="signup-mail" class="input is-success" type="text" placeholder="Email">
-                  <span class="icon is-small is-left">
-                    <i class="fa fa-envelope"></i>
-                  </span>
-                  <span class="icon is-small is-right">
-                    <i class="fa fa-check"></i>
-                  </span>
-                </p>
-              </div>
-              <div class="field">
-                <p class="control has-icons-left has-icons-right">
-                  <input id="signup-pass" class="input" type="password" placeholder="Password">
-                  <span class="icon is-small is-left">
-                    <i class="fa fa-lock"></i>
-                  </span>
-                  <span class="icon is-small is-right">
-                    <i class="fa fa-check"></i>
-                  </span>
-                </p>
-              </div>
-              <br>
-              <a id="signup-button" class="form-button button is-primary is-inverted is-outlined">Sign Up</a>
-              <br>
-              <br>
-              <i><a id="feedback" class="feedback"></a></i>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>  
-  </div>
-</section>
-<section class="hero">
-  <footer class="footer">
     <div class="container">
-      <div class="content has-text-centered">
-        <p>
-          <strong>Finance Advisor</strong> by Stefan K., Peter H. and Simon P.
-          <span class="icon is-small">
-            <i class="fa fa-copyright"></i>
-          </span>2019</a>
-        </p>
-        <p>
-          <a class="icon has-text-primary" href="https://github.com/Pizajolo/finance-bot" target="_blank">
-            <i class="fa fa-globe"></i>
-          </a>          
-          <a class="icon has-text-primary" href="https://github.com/Pizajolo/finance-bot" target="_blank">
-            <i class="fa fa-github"></i>
-          </a>
-          <a class="icon has-text-primary" href="" target="_blank">
-            <i class="fa fa-envelope"></i>
-          </a>
-        </p>
-      </div>
+        <div class="row justify-content-center">
+            <div class="col-md-9 col-lg-12 col-xl-10">
+                <div class="card shadow-lg o-hidden border-0 my-5">
+                    <div class="card-body p-0">
+                        <div class="row">
+                            <div class="col-lg-6 d-none d-lg-flex">
+                                <div class="flex-grow-1 bg-login-image" style="background-image: url('../static/assets/img/dogs/image3.jpeg?h=cbc3a40dae521ddee89bf6b026abde71');"></div>
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="p-5">
+                                    <div class="text-center">
+                                        <h4 class="text-dark mb-4">Welcome Back!</h4>
+                                    </div>
+{#                                    <form class="user">#}
+                                        <div class="form-group">
+                                            <!-- Start: #username_login --><input class="form-control form-control-user" type="text" id="login-user" name="username" placeholder="Username">
+                                            <!-- End: #username_login -->
+                                        </div>
+                                        <div class="form-group">
+                                            <!-- Start: #password_login --><input class="form-control form-control-user" type="password" id="login-pass" placeholder="Password" name="password">
+                                            <!-- End: #password_login -->
+                                        </div>
+                                        <div class="form-group">
+                                            <div class="custom-control custom-checkbox small">
+                                                <div class="form-check"><input class="form-check-input custom-control-input" type="checkbox" id="formCheck-1"><label class="form-check-label custom-control-label" for="formCheck-1">Remember Me</label></div>
+                                            </div>
+                                        </div><button class="btn btn-primary btn-block text-white btn-user" type="submit" id="login-button">Login</button>
+                                        <hr>
+{#                                    </form>#}
+                                    <div class="text-center"><a class="small" href="forgot-password">Forgot Password?</a></div>
+                                    <div class="text-center"><a class="small" href="register">Create an Account!</a></div>
+                                    <div class="text-center"><a class="small" href="landing">Want to learn more about us?</a></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-  </footer>
-</section>
 {% endblock %}
 {% block scripts %}
-<script src="../static/js/scripts.js"></script>
+    <script src="../static/js/scripts.js"></script>
 {% endblock %}
