made search box in home smaller

--- a/templates/home.html
+++ b/templates/home.html
@@ -96,7 +96,7 @@
                         <div class="col" style="padding: 0px;padding-right: 0px;padding-left: 0px;">
 
                             <!--Main Search-->
-                            <form action="/analyse" method="GET">
+                            <form action="/analyse" method="GET" class="d-sm-inline-block mr-auto ml-md-3 my-2 my-md-0 mw-100">
                                 <div class="input-group" style="background-color: rgba(0,0,0,0);"><input id="form-input-main" name="stock"
                                         class="bg-dark form-control form-control-lg border-0 small"
                                         type="text" placeholder="Search for Stocks..."
