--- a/templates/home.html
+++ b/templates/home.html
@@ -117,9 +117,9 @@
                                     <h6 class="text-primary m-0 font-weight-bold">Why trust us?</h6>
                                 </div>
                                 <div class="card-body">
-                                    <p class="m-0">The styling for this basic card example is created by using default
-                                        Bootstrap utility classes. By using utility classes, the style of the card
-                                        component can be easily modified with no need for any custom CSS!</p>
+                                    <p class="m-0">Our Startup has financial and AI experts that work together to build an financial Artificial Intelligence that trades
+                                        better than most humans do. The Algorithms that we us are strongly tested on Data that the AI has never seen befor,
+                                        so we make sure that our AI makes money in the future!</p>
                                 </div>
                             </div>
                             <!-- End: Basic Card -->
@@ -131,9 +131,9 @@
                                     <h6 class="text-primary m-0 font-weight-bold">Why is AI better than humans?</h6>
                                 </div>
                                 <div class="card-body">
-                                    <p class="m-0">The styling for this basic card example is created by using default
-                                        Bootstrap utility classes. By using utility classes, the style of the card
-                                        component can be easily modified with no need for any custom CSS!</p>
+                                    <p class="m-0">The big problem with humans is that they tend to get emotional about stuff.
+                                        That is where the AI has its advantages. It always thinks abstract and has no emotions.
+                                        But also it gets never tired and always does the best it can to make money for you!</p>
                                 </div>
                             </div>
                             <!-- End: Basic Card -->
@@ -147,9 +147,9 @@
                                     <h6 class="text-primary m-0 font-weight-bold">How does it work?</h6>
                                 </div>
                                 <div class="card-body">
-                                    <p class="m-0">The styling for this basic card example is created by using default
-                                        Bootstrap utility classes. By using utility classes, the style of the card
-                                        component can be easily modified with no need for any custom CSS!</p>
+                                    <p class="m-0">We us Deep-Q-Learning, which is a type of reinforcement learning. We have an Agent,
+                                        which is an Deep Neural Network, that we train on over 20 years of Stock data. If it performs great, the AI
+                                        is tested on one Year that it has never seen before.</p>
                                 </div>
                             </div>
                             <!-- End: Basic Card -->
@@ -162,9 +162,9 @@
                                         FREE</h6>
                                 </div>
                                 <div class="card-body">
-                                    <p class="m-0">The styling for this basic card example is created by using default
-                                        Bootstrap utility classes. By using utility classes, the style of the card
-                                        component can be easily modified with no need for any custom CSS!</p>
+                                    <p class="m-0">You want to see how good our algorithm is? Check out all kinds of Stocks and how our AI would perform by searching the
+                                        the short name of the stock(Apple = AAPL). To get an E-mail each time
+                                        our AI buys or sells an stock, it costs $1 per month per stock.</p>
                                 </div>
                             </div>
                             <!-- End: Basic Card -->
